Changes path for datasets

--- a/exploration_air_quality_dataset.ipynb
+++ b/exploration_air_quality_dataset.ipynb
@@ -18,13 +18,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_11760\\4093920657.py:3: DtypeWarning: Columns (6,7,8,9,10,11,12,13,14,15,16,18,19,20,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_7380\\2965126160.py:3: DtypeWarning: Columns (6,7,8,9,10,11,12,13,14,15,16,18,19,20,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  air_df = pd.read_csv(air_quality_dataset)\n"
      ]
     }
    ],
    "source": [
-    "air_quality_dataset = \"air_quality.csv\"\n",
+    "air_quality_dataset = \"data/air_quality.csv\"\n",
     "\n",
     "air_df = pd.read_csv(air_quality_dataset)"
    ]
