adds initial exploration of air quality dataset

--- a/exploration_air_quality_dataset.ipynb
+++ b/exploration_air_quality_dataset.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option(\"display.max_columns\", None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -18,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_7380\\2965126160.py:3: DtypeWarning: Columns (6,7,8,9,10,11,12,13,14,15,16,18,19,20,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_9228\\2965126160.py:3: DtypeWarning: Columns (6,7,8,9,10,11,12,13,14,15,16,18,19,20,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  air_df = pd.read_csv(air_quality_dataset)\n"
      ]
     }
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +94,11 @@
        "      <th>co</th>\n",
        "      <th>o3</th>\n",
        "      <th>o3_8hr</th>\n",
-       "      <th>...</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>pm2.5</th>\n",
+       "      <th>no2</th>\n",
+       "      <th>nox</th>\n",
+       "      <th>no</th>\n",
        "      <th>windspeed</th>\n",
        "      <th>winddirec</th>\n",
        "      <th>unit</th>\n",
@@ -111,7 +124,11 @@
        "      <td>0.17</td>\n",
        "      <td>35.0</td>\n",
        "      <td>40.2</td>\n",
-       "      <td>...</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>2.3</td>\n",
        "      <td>225</td>\n",
        "      <td>NaN</td>\n",
@@ -135,7 +152,11 @@
        "      <td>0.32</td>\n",
        "      <td>27.9</td>\n",
        "      <td>35.1</td>\n",
-       "      <td>...</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>1.1</td>\n",
        "      <td>184</td>\n",
        "      <td>NaN</td>\n",
@@ -159,7 +180,11 @@
        "      <td>0.17</td>\n",
        "      <td>25.1</td>\n",
        "      <td>40.6</td>\n",
-       "      <td>...</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.1</td>\n",
        "      <td>0.4</td>\n",
        "      <td>210</td>\n",
        "      <td>NaN</td>\n",
@@ -183,7 +208,11 @@
        "      <td>0.2</td>\n",
        "      <td>30.0</td>\n",
        "      <td>35.9</td>\n",
-       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>0.7</td>\n",
        "      <td>1.9</td>\n",
        "      <td>239</td>\n",
        "      <td>NaN</td>\n",
@@ -207,7 +236,11 @@
        "      <td>0.16</td>\n",
        "      <td>33.5</td>\n",
        "      <td>35.9</td>\n",
-       "      <td>...</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.2</td>\n",
        "      <td>1.8</td>\n",
        "      <td>259</td>\n",
        "      <td>NaN</td>\n",
@@ -221,7 +254,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -232,30 +264,144 @@
        "3  2024-08-31 23:00    Hsinchu    Hsinchu City  42.0       NaN      Good  0.8   \n",
        "4  2024-08-31 23:00     Toufen   Miaoli County  50.0       NaN      Good  1.0   \n",
        "\n",
-       "     co    o3 o3_8hr  ... windspeed winddirec unit co_8hr pm2.5_avg pm10_avg  \\\n",
-       "0  0.17  35.0   40.2  ...       2.3       225  NaN    0.2      20.1     26.0   \n",
-       "1  0.32  27.9   35.1  ...       1.1       184  NaN    0.2      15.3     23.0   \n",
-       "2  0.17  25.1   40.6  ...       0.4       210  NaN    0.2      13.8     24.0   \n",
-       "3   0.2  30.0   35.9  ...       1.9       239  NaN    0.2      13.0     26.0   \n",
-       "4  0.16  33.5   35.9  ...       1.8       259  NaN    0.1      15.3     28.0   \n",
+       "     co    o3 o3_8hr  pm10 pm2.5  no2  nox   no windspeed winddirec  unit  \\\n",
+       "0  0.17  35.0   40.2  18.0  17.0  2.3  2.6  0.3       2.3       225   NaN   \n",
+       "1  0.32  27.9   35.1  27.0  14.0  7.6  9.3  1.6       1.1       184   NaN   \n",
+       "2  0.17  25.1   40.6  21.0  13.0  2.9  4.1  1.1       0.4       210   NaN   \n",
+       "3   0.2  30.0   35.9  19.0  10.0  4.0  4.8  0.7       1.9       239   NaN   \n",
+       "4  0.16  33.5   35.9  18.0  14.0  1.8  3.1  1.2       1.8       259   NaN   \n",
        "\n",
-       "  so2_avg   longitude   latitude siteid  \n",
-       "0     1.0  121.038869  24.900097   22.0  \n",
-       "1     1.0  120.641092  24.151958   31.0  \n",
-       "2     0.0  121.088955  24.740914   23.0  \n",
-       "3     1.0  120.972368  24.805636   24.0  \n",
-       "4     1.0  120.898693  24.696907   25.0  \n",
-       "\n",
-       "[5 rows x 25 columns]"
+       "  co_8hr pm2.5_avg pm10_avg so2_avg   longitude   latitude  siteid  \n",
+       "0    0.2      20.1     26.0     1.0  121.038869  24.900097    22.0  \n",
+       "1    0.2      15.3     23.0     1.0  120.641092  24.151958    31.0  \n",
+       "2    0.2      13.8     24.0     0.0  121.088955  24.740914    23.0  \n",
+       "3    0.2      13.0     26.0     1.0  120.972368  24.805636    24.0  \n",
+       "4    0.1      15.3     28.0     1.0  120.898693  24.696907    25.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "air_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5882208 entries, 0 to 5882207\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column     Dtype  \n",
+      "---  ------     -----  \n",
+      " 0   date       object \n",
+      " 1   sitename   object \n",
+      " 2   county     object \n",
+      " 3   aqi        float64\n",
+      " 4   pollutant  object \n",
+      " 5   status     object \n",
+      " 6   so2        object \n",
+      " 7   co         object \n",
+      " 8   o3         object \n",
+      " 9   o3_8hr     object \n",
+      " 10  pm10       object \n",
+      " 11  pm2.5      object \n",
+      " 12  no2        object \n",
+      " 13  nox        object \n",
+      " 14  no         object \n",
+      " 15  windspeed  object \n",
+      " 16  winddirec  object \n",
+      " 17  unit       float64\n",
+      " 18  co_8hr     object \n",
+      " 19  pm2.5_avg  object \n",
+      " 20  pm10_avg   object \n",
+      " 21  so2_avg    object \n",
+      " 22  longitude  float64\n",
+      " 23  latitude   float64\n",
+      " 24  siteid     float64\n",
+      "dtypes: float64(5), object(20)\n",
+      "memory usage: 1.1+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "air_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date               0\n",
+       "sitename           0\n",
+       "county             0\n",
+       "aqi            43020\n",
+       "pollutant    3235012\n",
+       "status        142718\n",
+       "so2           139768\n",
+       "co            113504\n",
+       "o3            125017\n",
+       "o3_8hr        131081\n",
+       "pm10          140358\n",
+       "pm2.5         131438\n",
+       "no2           165977\n",
+       "nox           169124\n",
+       "no            169455\n",
+       "windspeed     219498\n",
+       "winddirec     219736\n",
+       "unit         5882208\n",
+       "co_8hr         81229\n",
+       "pm2.5_avg      79941\n",
+       "pm10_avg       89875\n",
+       "so2_avg       629162\n",
+       "longitude     933620\n",
+       "latitude      933620\n",
+       "siteid       1779469\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problemas\n",
+    "\n",
+    "- Linhas nulas na coluna targuet status (142718)\n",
+    "- Coluna unit totalmente nula\n",
+    "- Várias colunas com tipos misturados\n",
+    "\n",
+    "## Tasks\n",
+    "\n",
+    "- Dropar as linhas que tem o target (coluna status) nulo\n",
+    "- Dropar a coluna unit (inútil)"
    ]
   },
   {
