add first preprocessing and parquet file

--- a/preprocess_to_parquet.ipynb
+++ b/preprocess_to_parquet.ipynb
@@ -6,28 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option(\"display.max_columns\", None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_13020\\2965126160.py:3: DtypeWarning: Columns (6,7,8,9,10,11,12,13,14,15,16,18,19,20,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_5528\\2965126160.py:3: DtypeWarning: Columns (6,7,8,9,10,11,12,13,14,15,16,18,19,20,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  air_df = pd.read_csv(air_quality_dataset)\n"
      ]
     }
@@ -40,22 +34,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_to_numeric = ['so2', 'co',\t'o3', 'o3_8hr', 'pm10', 'pm2.5', 'no2',\t'nox', 'no', 'windspeed', 'winddirec', 'unit', 'co_8hr', 'pm2.5_avg', 'pm10_avg', 'so2_avg']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5882208, 25)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "air_df.shape"
+    "from preprocessing import Preprocessing\n",
+    "\n",
+    "prep = Preprocessing(air_df)\n",
+    "air_df = prep.cols_to_numeric(cols_to_numeric)"
    ]
   },
   {
@@ -130,7 +125,7 @@
        "      <td>2.6</td>\n",
        "      <td>0.3</td>\n",
        "      <td>2.3</td>\n",
-       "      <td>225</td>\n",
+       "      <td>225.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.2</td>\n",
        "      <td>20.1</td>\n",
@@ -158,7 +153,7 @@
        "      <td>9.3</td>\n",
        "      <td>1.6</td>\n",
        "      <td>1.1</td>\n",
-       "      <td>184</td>\n",
+       "      <td>184.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.2</td>\n",
        "      <td>15.3</td>\n",
@@ -186,7 +181,7 @@
        "      <td>4.1</td>\n",
        "      <td>1.1</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>210</td>\n",
+       "      <td>210.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.2</td>\n",
        "      <td>13.8</td>\n",
@@ -205,7 +200,7 @@
        "      <td>NaN</td>\n",
        "      <td>Good</td>\n",
        "      <td>0.8</td>\n",
-       "      <td>0.2</td>\n",
+       "      <td>0.20</td>\n",
        "      <td>30.0</td>\n",
        "      <td>35.9</td>\n",
        "      <td>19.0</td>\n",
@@ -214,7 +209,7 @@
        "      <td>4.8</td>\n",
        "      <td>0.7</td>\n",
        "      <td>1.9</td>\n",
-       "      <td>239</td>\n",
+       "      <td>239.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.2</td>\n",
        "      <td>13.0</td>\n",
@@ -242,7 +237,7 @@
        "      <td>3.1</td>\n",
        "      <td>1.2</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>259</td>\n",
+       "      <td>259.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>15.3</td>\n",
@@ -264,19 +259,19 @@
        "3  2024-08-31 23:00    Hsinchu    Hsinchu City  42.0       NaN      Good  0.8   \n",
        "4  2024-08-31 23:00     Toufen   Miaoli County  50.0       NaN      Good  1.0   \n",
        "\n",
-       "     co    o3 o3_8hr  pm10 pm2.5  no2  nox   no windspeed winddirec  unit  \\\n",
-       "0  0.17  35.0   40.2  18.0  17.0  2.3  2.6  0.3       2.3       225   NaN   \n",
-       "1  0.32  27.9   35.1  27.0  14.0  7.6  9.3  1.6       1.1       184   NaN   \n",
-       "2  0.17  25.1   40.6  21.0  13.0  2.9  4.1  1.1       0.4       210   NaN   \n",
-       "3   0.2  30.0   35.9  19.0  10.0  4.0  4.8  0.7       1.9       239   NaN   \n",
-       "4  0.16  33.5   35.9  18.0  14.0  1.8  3.1  1.2       1.8       259   NaN   \n",
+       "     co    o3  o3_8hr  pm10  pm2.5  no2  nox   no  windspeed  winddirec  unit  \\\n",
+       "0  0.17  35.0    40.2  18.0   17.0  2.3  2.6  0.3        2.3      225.0   NaN   \n",
+       "1  0.32  27.9    35.1  27.0   14.0  7.6  9.3  1.6        1.1      184.0   NaN   \n",
+       "2  0.17  25.1    40.6  21.0   13.0  2.9  4.1  1.1        0.4      210.0   NaN   \n",
+       "3  0.20  30.0    35.9  19.0   10.0  4.0  4.8  0.7        1.9      239.0   NaN   \n",
+       "4  0.16  33.5    35.9  18.0   14.0  1.8  3.1  1.2        1.8      259.0   NaN   \n",
        "\n",
-       "  co_8hr pm2.5_avg pm10_avg so2_avg   longitude   latitude  siteid  \n",
-       "0    0.2      20.1     26.0     1.0  121.038869  24.900097    22.0  \n",
-       "1    0.2      15.3     23.0     1.0  120.641092  24.151958    31.0  \n",
-       "2    0.2      13.8     24.0     0.0  121.088955  24.740914    23.0  \n",
-       "3    0.2      13.0     26.0     1.0  120.972368  24.805636    24.0  \n",
-       "4    0.1      15.3     28.0     1.0  120.898693  24.696907    25.0  "
+       "   co_8hr  pm2.5_avg  pm10_avg  so2_avg   longitude   latitude  siteid  \n",
+       "0     0.2       20.1      26.0      1.0  121.038869  24.900097    22.0  \n",
+       "1     0.2       15.3      23.0      1.0  120.641092  24.151958    31.0  \n",
+       "2     0.2       13.8      24.0      0.0  121.088955  24.740914    23.0  \n",
+       "3     0.2       13.0      26.0      1.0  120.972368  24.805636    24.0  \n",
+       "4     0.1       15.3      28.0      1.0  120.898693  24.696907    25.0  "
       ]
      },
      "execution_count": 5,
@@ -294,54 +289,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5882208 entries, 0 to 5882207\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column     Dtype  \n",
-      "---  ------     -----  \n",
-      " 0   date       object \n",
-      " 1   sitename   object \n",
-      " 2   county     object \n",
-      " 3   aqi        float64\n",
-      " 4   pollutant  object \n",
-      " 5   status     object \n",
-      " 6   so2        object \n",
-      " 7   co         object \n",
-      " 8   o3         object \n",
-      " 9   o3_8hr     object \n",
-      " 10  pm10       object \n",
-      " 11  pm2.5      object \n",
-      " 12  no2        object \n",
-      " 13  nox        object \n",
-      " 14  no         object \n",
-      " 15  windspeed  object \n",
-      " 16  winddirec  object \n",
-      " 17  unit       float64\n",
-      " 18  co_8hr     object \n",
-      " 19  pm2.5_avg  object \n",
-      " 20  pm10_avg   object \n",
-      " 21  so2_avg    object \n",
-      " 22  longitude  float64\n",
-      " 23  latitude   float64\n",
-      " 24  siteid     float64\n",
-      "dtypes: float64(5), object(20)\n",
-      "memory usage: 1.1+ GB\n"
-     ]
-    }
-   ],
-   "source": [
-    "air_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "date         0.000000\n",
@@ -350,29 +297,29 @@
        "aqi          0.007314\n",
        "pollutant    0.549966\n",
        "status       0.024263\n",
-       "so2          0.023761\n",
-       "co           0.019296\n",
-       "o3           0.021253\n",
-       "o3_8hr       0.022284\n",
-       "pm10         0.023861\n",
-       "pm2.5        0.022345\n",
-       "no2          0.028217\n",
-       "nox          0.028752\n",
-       "no           0.028808\n",
-       "windspeed    0.037316\n",
-       "winddirec    0.037356\n",
+       "so2          0.023765\n",
+       "co           0.026203\n",
+       "o3           0.035263\n",
+       "o3_8hr       0.026121\n",
+       "pm10         0.024932\n",
+       "pm2.5        0.034379\n",
+       "no2          0.028221\n",
+       "nox          0.028756\n",
+       "no           0.028812\n",
+       "windspeed    0.051457\n",
+       "winddirec    0.051498\n",
        "unit         1.000000\n",
-       "co_8hr       0.013809\n",
-       "pm2.5_avg    0.013590\n",
-       "pm10_avg     0.015279\n",
-       "so2_avg      0.106960\n",
+       "co_8hr       0.017604\n",
+       "pm2.5_avg    0.013594\n",
+       "pm10_avg     0.016349\n",
+       "so2_avg      0.106964\n",
        "longitude    0.158719\n",
        "latitude     0.158719\n",
        "siteid       0.302517\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,21 +329,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Problemas\n",
-    "\n",
-    "- Linhas nulas na coluna targuet status (142718)\n",
-    "- Coluna unit totalmente nula\n",
-    "- Coluna pollutant com 55% de valores nulos\n",
-    "- Várias outras colunas com valores nulos (abaixo de 31%)\n",
-    "- Várias colunas com tipos misturados\n",
-    "\n",
-    "## Tasks\n",
-    "\n",
-    "- Dropar as linhas que tem o target (coluna status) nulo\n",
-    "- Dropar a coluna unit (inútil)"
+    "air_df.to_parquet('air_quality_dataset.parquet', index=True)"
    ]
   },
   {
@@ -409,7 +347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-project",
    "language": "python",
    "name": "python3"
   },
