adds treatment for date column

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -8,24 +8,27 @@
     "\n",
     "- Linhas nulas na coluna targuet status (142718) -> *Resolvido*\n",
     "- Coluna unit totalmente nula -> *Resolvido*\n",
-    "- Coluna pollutant com 55% de valores nulos \n",
-    "- Várias outras colunas com valores nulos (abaixo de 31%)\n",
     "- Várias colunas com tipos misturados -> *Resolvido*\n",
-    "- Agrupar a coluna date de alguma maneira e fazer o casting dos valores para data (dias / horas / meses / anos)\n",
-    "- Verificar do que se trata a coluna pollutant e sua importância\n",
-    "- Fazer encoding das colunas sitename, county e pollutant\n",
+    "- Transformar a coluna date de object pata data de verdade -> *Resolvido*\n",
+    "- Agrupar a coluna date de alguma maneira e fazer o casting dos valores para data (dias/horas/meses/anos)  -> *Resolvido*\n",
     "- Coluna inútil siteid -> *Resolvido*\n",
+    "- Várias outras colunas com valores nulos (abaixo de 31%)\n",
+    "- Verificar do que se trata a coluna pollutant e sua importância\n",
+    "- Coluna pollutant com 55% de valores nulos \n",
+    "- Fazer encoding das colunas sitename, county e pollutant\n",
     "\n",
     "## Tasks\n",
     "\n",
     "- Tratar colunas com tipos misturados ---------------------> *Feito* (preprocess_to_parquet.ipynb file)\n",
+    "- Tratar tipo da coluna date ------------------------------> *Feito*\n",
+    "- Tratar aglomeração da coluna date -----------------------> *Feito*\n",
     "- Dropar as linhas que tem o target (coluna status) nulo --> *Feito*\n",
     "- Dropar as coluna unit e siteid (inúteis) ----------------> *Feito*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +270,7 @@
        "4     0.1       15.3      28.0      1.0  120.898693  24.696907    25.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +363,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +399,7 @@
        "0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -459,13 +462,160 @@
       " 21  longitude  float64\n",
       " 22  latitude   float64\n",
       "dtypes: float64(18), object(5)\n",
-      "memory usage: 1.2+ GB\n"
+      "memory usage: 1.0+ GB\n"
      ]
     }
    ],
    "source": [
     "air_df.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tratando coluna date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 5739490 entries, 0 to 5882207\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column     Dtype  \n",
+      "---  ------     -----  \n",
+      " 0   date       object \n",
+      " 1   sitename   object \n",
+      " 2   county     object \n",
+      " 3   aqi        float64\n",
+      " 4   pollutant  object \n",
+      " 5   status     object \n",
+      " 6   so2        float64\n",
+      " 7   co         float64\n",
+      " 8   o3         float64\n",
+      " 9   o3_8hr     float64\n",
+      " 10  pm10       float64\n",
+      " 11  pm2.5      float64\n",
+      " 12  no2        float64\n",
+      " 13  nox        float64\n",
+      " 14  no         float64\n",
+      " 15  windspeed  float64\n",
+      " 16  winddirec  float64\n",
+      " 17  co_8hr     float64\n",
+      " 18  pm2.5_avg  float64\n",
+      " 19  pm10_avg   float64\n",
+      " 20  so2_avg    float64\n",
+      " 21  longitude  float64\n",
+      " 22  latitude   float64\n",
+      "dtypes: float64(18), object(5)\n",
+      "memory usage: 1.0+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "air_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# air_df['date'] = pd.to_datetime(air_df['date'], format=\"%Y-%m-%d %H:%M\", errors='coerce')\n",
+    "air_df['date'] = pd.to_datetime(air_df['date'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date              85\n",
+       "sitename           0\n",
+       "county             0\n",
+       "aqi              590\n",
+       "pollutant    3185191\n",
+       "status             0\n",
+       "so2           110645\n",
+       "co            125200\n",
+       "o3            175551\n",
+       "o3_8hr        117588\n",
+       "pm10          113305\n",
+       "pm2.5         167820\n",
+       "no2           135602\n",
+       "nox           136178\n",
+       "no            136513\n",
+       "windspeed     271909\n",
+       "winddirec     272164\n",
+       "co_8hr         71235\n",
+       "pm2.5_avg      39784\n",
+       "pm10_avg       55207\n",
+       "so2_avg       512074\n",
+       "longitude     826019\n",
+       "latitude      826019\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_df.dropna(subset=['date'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df['date'].isnull().sum()/air_df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Talvez não seja correto fazer alguma aglomeração nessa coluna, pois o target não é numérico. Não teria uma forma \"exata\" de fazer a soma e média das classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
