--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -12,9 +12,9 @@
     "- Transformar a coluna date de object pata data de verdade -> *Resolvido*\n",
     "- Agrupar a coluna date de alguma maneira e fazer o casting dos valores para data (dias/horas/meses/anos)  -> *Resolvido*\n",
     "- Coluna inútil siteid -> *Resolvido*\n",
+    "- Verificar do que se trata a coluna pollutant e sua importância -> *Resolvido*\n",
+    "- Coluna pollutant com 55% de valores nulos -> *Resolvido* \n",
     "- Várias outras colunas com valores nulos (abaixo de 31%)\n",
-    "- Verificar do que se trata a coluna pollutant e sua importância\n",
-    "- Coluna pollutant com 55% de valores nulos \n",
     "- Fazer encoding das colunas sitename, county e pollutant\n",
     "\n",
     "## Tasks\n",
@@ -615,7 +615,119 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Verificando importância da coluna pollutant e se ela pode ser descartada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5549577003191097"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df['pollutant'].isnull().sum()/air_df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pollutant\n",
+       "PM2.5                     2213287\n",
+       "Ozone (8hr)                242678\n",
+       "PM10                        73819\n",
+       "Nitrogen Dioxide (NO2)      23948\n",
+       "Sulfur Dioxide (SO2)          472\n",
+       "Ozone                          72\n",
+       "Carbon Monoxide (CO)            2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df['pollutant'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Descrição no dicionário de dados - Main pollutant\n",
+    "Acho que pode ser dropada, me parece apenas uma info complementar e ela de 55% de valores nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_df.drop(labels=['pollutant'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 5739405 entries, 0 to 5882207\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column     Dtype         \n",
+      "---  ------     -----         \n",
+      " 0   date       datetime64[ns]\n",
+      " 1   sitename   object        \n",
+      " 2   county     object        \n",
+      " 3   aqi        float64       \n",
+      " 4   status     object        \n",
+      " 5   so2        float64       \n",
+      " 6   co         float64       \n",
+      " 7   o3         float64       \n",
+      " 8   o3_8hr     float64       \n",
+      " 9   pm10       float64       \n",
+      " 10  pm2.5      float64       \n",
+      " 11  no2        float64       \n",
+      " 12  nox        float64       \n",
+      " 13  no         float64       \n",
+      " 14  windspeed  float64       \n",
+      " 15  winddirec  float64       \n",
+      " 16  co_8hr     float64       \n",
+      " 17  pm2.5_avg  float64       \n",
+      " 18  pm10_avg   float64       \n",
+      " 19  so2_avg    float64       \n",
+      " 20  longitude  float64       \n",
+      " 21  latitude   float64       \n",
+      "dtypes: datetime64[ns](1), float64(18), object(3)\n",
+      "memory usage: 1007.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "air_df.info()"
+   ]
   },
   {
    "cell_type": "code",
