updates main markdown

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -23,7 +23,8 @@
     "- Tratar tipo da coluna date ------------------------------> *Feito*\n",
     "- Tratar aglomeração da coluna date -----------------------> *Feito*\n",
     "- Dropar as linhas que tem o target (coluna status) nulo --> *Feito*\n",
-    "- Dropar as coluna unit e siteid (inúteis) ----------------> *Feito*"
+    "- Dropar as coluna unit e siteid (inúteis) ----------------> *Feito*\n",
+    "- Verificação e tratamento da coluna pollutant ------------> *Feito*"
    ]
   },
   {
