updates main markdown

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -15,7 +15,9 @@
     "- Verificar do que se trata a coluna pollutant e sua importância -> *Resolvido*\n",
     "- Coluna pollutant com 55% de valores nulos -> *Resolvido* \n",
     "- Várias outras colunas com valores nulos (abaixo de 31%)\n",
+    "- Popular colunas de latitude e longitude com os dados de county\n",
     "- Fazer encoding das colunas sitename, county e pollutant\n",
+    "- Testar one_hot_encoding e target_encoding\n",
     "\n",
     "## Tasks\n",
     "\n",
@@ -728,6 +730,49 @@
    ],
    "source": [
     "air_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "county\n",
+       "New Taipei City      886272\n",
+       "Kaohsiung City       853539\n",
+       "Taipei City          496109\n",
+       "Taoyuan City         440625\n",
+       "Taichung City        359168\n",
+       "Tainan City          355516\n",
+       "Pingtung County      295781\n",
+       "Changhua County      286175\n",
+       "Yunlin County        275834\n",
+       "Miaoli County        215703\n",
+       "Nantou County        208559\n",
+       "Yilan County         145880\n",
+       "Taitung County       142378\n",
+       "Hsinchu County       141435\n",
+       "Chiayi County        139738\n",
+       "Hsinchu City          74775\n",
+       "Hualien County        71530\n",
+       "Penghu County         71044\n",
+       "Keelung City          70979\n",
+       "Lienchiang County     69817\n",
+       "Kinmen County         69383\n",
+       "Chiayi City           69165\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df['county'].value_counts()"
    ]
   },
   {
