--- a/exploration_air_quality_dataset.ipynb
+++ b/exploration_air_quality_dataset.ipynb
@@ -409,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-project",
    "language": "python",
    "name": "python3"
   },
