--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2544,6 +2544,59 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status\n",
+       "Good                              2509369\n",
+       "Moderate                          1726983\n",
+       "Unhealthy for Sensitive Groups     317214\n",
+       "Unhealthy                           47754\n",
+       "Very Unhealthy                        148\n",
+       "Hazardous                              37\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df['status'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status\n",
+       "Good                              2509369\n",
+       "Moderate                          1726983\n",
+       "Unhealthy for Sensitive Groups     317214\n",
+       "Unhealthy                           47754\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_df.drop(air_df[air_df['status'].isin([\"Very Unhealthy\", \"Hazardous\"])].index, inplace=True)\n",
+    "air_df['status'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
@@ -3388,7 +3441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4215,7 +4268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Good': 0, 'Hazardous': 1, 'Moderate': 2, 'Unhealthy': 3, 'Unhealthy for Sensitive Groups': 4, 'Very Unhealthy': 5}\n"
+      "{'Good': 0, 'Moderate': 1, 'Unhealthy': 2, 'Unhealthy for Sensitive Groups': 3}\n"
      ]
     }
    ],
@@ -4233,11 +4286,9 @@
       "text/plain": [
        "status\n",
        "0    2509369\n",
-       "2    1726983\n",
-       "4     317214\n",
-       "3      47754\n",
-       "5        148\n",
-       "1         37\n",
+       "1    1726983\n",
+       "3     317214\n",
+       "2      47754\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -4256,41 +4307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "air_df.drop(air_df[air_df['status'].isin([5, 1])].index, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "status\n",
-       "0    2509369\n",
-       "2    1726983\n",
-       "4     317214\n",
-       "3      47754\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "air_df['status'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# air_df.to_parquet('air_quality_dataset_treated.parquet', index=True)"
+    "air_df.to_parquet('air_quality_dataset_treated.parquet', index=True)"
    ]
   },
   {
